--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 /* Обнуление*/
-*{
+* {
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
     color: #3a3a3a;
 }
 ul,
 ol,
-li{
+li {
     list-style: none;
 }
-img{
+img {
     vertical-align: top;
 }
 h1,
@@ -25,7 +25,7 @@ h6{
     font-size: inherit;
 }
 
-*,*:before,*:after{
+*,*:before,*:after {
     padding: 0;
     margin: 0;
     border: 0;
@@ -33,17 +33,17 @@ h6{
 }
 /* Обнуление*/
 
-html{
+html {
     font-size: 62.5%;
     font-family: Arial, "Helvetica Neue" ,Helvetica, sans-serif;
 }
 
-.text-center{
+.text-center {
     text-align: center;
 }
 
 /*authorization-bem*/
-.modal-wrapper{
+.modal-wrapper {
     position: fixed;
     z-index: 1;
     top: 0;
@@ -56,31 +56,31 @@ html{
     background-color: #09101a;
     overflow: auto;
 }
-.modal{
+.modal {
     max-width: 516px;
     max-height: 550px;
     width: 100%;
 }
-.modal__content{
+.modal__content {
     /*max-width: 516px;*/
     /*max-height: 550px;*/
     /*width: 100%;*/
     background-color: #17212b;
 }
-.modal__close-wrapper{
+.modal__close-wrapper {
     display: flex;
     justify-content: right;
     overflow: hidden;
 }
-.modal__close{
-    color: white;
+.modal__close {
+    color: #ffffff;
     background-color: #17212b;
     cursor: pointer;
     margin-right: 15px;
     margin-top: 10px;
     font-size: 2rem;
 }
-.auth-form__img{
+.auth-form__img {
     width: 136px;
     height: 136px;
     background-color: #242f3d;
@@ -90,7 +90,7 @@ html{
     align-items: center;
     margin: 0px 0 30px 0;
 }
-.auth-form{
+.auth-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -99,20 +99,20 @@ html{
     /*padding: 0 100px 40px 100px;*/
     padding-bottom: 40px;
 }
-.auth-form__title{
+.auth-form__title {
     font-size: 2.4rem;
     margin: 0px 0 15px 0;
-    color: white;
+    color: #ffffff;
 }
-.auth-form__description{
+.auth-form__description {
     color: #b6b2b2;
     font-size: 1.6rem;
     margin-bottom: 45px;
 }
-.auth-form__input-wrapper + .auth-form__input-wrapper{
+.auth-form__input-wrapper + .auth-form__input-wrapper {
     margin-top: 25px;
 }
-.auth-form__input{
+.auth-form__input {
     border: none;
     /*margin-bottom: 25px;*/
     background-color: #17212b;
@@ -124,14 +124,14 @@ html{
     font-size: 1.6rem;
 }
 .auth-form__input:hover,
-.auth-form__input:focus{
+.auth-form__input:focus {
     border-color: #5288c1;
     color: white;
 }
-.auth-form__btn-wrapper{
+.auth-form__btn-wrapper {
     margin-top: 40px;
 }
-.auth-form__btn{
+.auth-form__btn {
     width: 130px;
     height: 40px;
     border-radius: 8px;
@@ -139,20 +139,20 @@ html{
     color: #ffffff;
     font-size: 1.6rem;
 }
-.auth-form__btn:hover{
+.auth-form__btn:hover {
     background-color:  #406B99;
     transition: 0.3s ease;
 }
 /*authorization-bem*/
 
 /*main-content*/
-.content-wrapper{
+.content-wrapper {
     min-height: 100vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
 }
-.container{
+.container {
     max-width: 1200px;
     margin: 0 auto;
     background-color: #17212b;
@@ -161,11 +161,11 @@ html{
     flex: 1 1 auto;
     background-color: #17212b;
 }
-.block-wrapper{
+.main-wrapper {
     width: 100%;
     display: flex;
 }
-.side-content{
+.side-content {
     display: flex;
     flex-direction: column;
     flex: 35%;
@@ -173,20 +173,19 @@ html{
     min-height: 100vh;
     border-right: 1px solid #0e1621;
 }
-.main-content{
-    display: flex;
-    flex: 65%;
-    justify-content: center;
+.sidebar-wrapper {
+    width: 100%;
+    padding: 10px;
 }
-.sidebar-header{
+.sidebar-header {
     display: flex;
     align-items: center;
 }
-.sidebar-header__input-search-wrapper{
+.sidebar-header__input-search-wrapper {
     margin-left: 10px;
 }
-.input-search{
-    width: 190px;
+.input-search {
+    width: 220px;
     height: 32px;
     border-radius: 4px;
     background-color: #242f3d;
@@ -194,10 +193,10 @@ html{
     padding-left: 8px;
     color: #a9a9a9;
 }
-.search__input:focus{
+.input-search:focus {
     color: white;
 }
-.sidebar-header__btn-container{
+.sidebar-header__btn-container {
     display: inline-block;
     cursor: pointer
 }
@@ -221,9 +220,127 @@ html{
 }
 /*main-content*/
 
-.test{
+.test {
     height: 40px;
     background-color: white;
     width: 250px;
 
 }
+
+
+/*chat-list*/
+.chat-list-wrapper {
+    width: 100%;
+}
+.chat-list {
+    padding: 10px;
+}
+.chat-list__chat {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 8px;
+}
+.chat-list__chat:hover,
+.chat-list__chat:focus {
+    background-color: #406B99;
+}
+.chat-list__chat + .chat-list__chat {
+    margin-top: 10px;
+}
+.avatar img{
+    vertical-align: middle;
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+}
+.user-caption {
+    margin-left: 10px;
+}
+.dialog-title span {
+    color: #e0e1e3;
+    font-size: 1.4rem;
+    line-height: 24px;
+}
+.dialog-subtitle span {
+    color: #718294;
+    font-size: 1.4rem;
+    line-height: 24px;
+}
+/*chat-list*/
+
+/*block-messages*/
+.block-messages {
+    display: flex;
+    flex: 65%;
+    flex-direction: column;
+}
+
+.block-messages__header {
+    min-height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10px;
+}
+
+.block-messages__tittle {
+    color: #ffffff;
+    font-size: 1.4rem;
+    line-height: 24px;
+}
+
+.block-messages__subtitle {
+    color: #5c6c7c;
+    font-size: 1.4rem;
+    line-height: 24px;
+}
+
+.messages-container {
+    flex: 1 1 auto;
+    background-color: #0e1621;
+}
+
+.block-messages__footer {
+    min-height: 54px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.new-message-wrapper {
+    width: 100%;
+    margin-right: 20px;
+}
+
+.input-message {
+    width: 100%;
+    border-radius: 4px;
+    background-color: #17212b;
+    caret-color: #ffffff;
+    padding-left: 8px;
+    font-size: 1.4rem;
+    line-height: 24px;
+    color: #ffffff;
+}
+
+.send-message-wrapper {
+
+}
+
+.send-message__button {
+    height: 28px;
+    width: 112px;
+    background-color: #5288c1;
+    border-radius: 6px;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.send-message__button:hover,
+.send-message__button:active {
+    background-color: #4572A3;
+}
+/*block-messages*/
