--- a/style.css
+++ b/style.css
@@ -209,14 +209,6 @@ html {
 }
 /*main-content*/
 
-.test {
-    height: 40px;
-    background-color: white;
-    width: 250px;
-
-}
-
-
 /*chat-list*/
 .chat-list-wrapper {
     width: 100%;
@@ -288,6 +280,78 @@ html {
 .messages-container {
     flex: 1 1 auto;
     background-color: #0e1621;
+    position: relative;
+}
+
+.messages-absolute-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.messages-absolute-wrapper::-webkit-scrollbar {
+    width: 0;
+    /*height: 0;*/
+}
+
+.message-row {
+    width: 96%;
+    margin: 10px;
+    display: flex;
+}
+
+.message-row-right {
+    justify-content: flex-end;
+}
+
+.message-row-left {
+    justify-content: flex-start;
+}
+
+.user-avatar-left {
+    order: -1;
+}
+
+.message-row__text {
+    background-color: #406B99;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 0 10px;
+    display: flex;
+}
+
+.message__text {
+    color: #ffffff;
+    font-size: 1.4rem;
+    line-height: 24px;
+}
+
+.message-time {
+    display: flex;
+    align-items: flex-end;
+    color: #7da8d3;
+    font-size: 1.4rem;
+}
+
+.message-time-left {
+    order: -1;
+    margin: 0 10px 0 0;
+}
+
+.message-time-right {
+    margin: 0 0 0 10px;
+}
+
+.user-avatar img{
+    vertical-align: middle;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    margin-top: 5px;
 }
 
 .block-messages__footer {
