--- a/style.css
+++ b/style.css
@@ -291,6 +291,38 @@ html {
 .block-messages__header {
     min-height: 70px;
     display: flex;
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*padding-left: 10px;*/
+}
+
+.block-messages__close-wrapper {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+
+.block-messages__close-button {
+    width: 45px;
+    height: 45px;
+    background-color: #17212b;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.block-messages__close-button:hover,
+.block-messages__close-button:active {
+    background-color: #0e1621;
+}
+
+.block-messages__wrapper {
+    min-height: 70px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 10px;
@@ -629,32 +661,32 @@ html {
 }
 /*modal-load-photo*/
 
-/*@media (max-width: 800px) {*/
-/*    .side-content {*/
-/*        flex: 100%;*/
-/*        flex-shrink: 0;*/
-/*    }*/
-
-/*    .sidebar-header__input-search-wrapper {*/
-/*        flex: 100%;*/
-/*    }*/
-
-/*    .input-search {*/
-/*        width: 100%;*/
-/*    }*/
-
-/*    .block-messages {*/
-/*        flex: 100%;*/
-/*    }*/
-/*}*/
-
-@media (max-width: 850px) {
-    .block-messages {
+@media (max-width: 800px) {
+    .side-content-small {
         flex: 100%;
         flex-shrink: 0;
     }
 
-    .side-content {
-        order: 1;
+    .sidebar-header__input-search-wrapper {
+        flex: 100%;
+    }
+
+    .input-search {
+        width: 100%;
+    }
+
+    .block-messages-small {
+        flex: 100%;
+    }
+
+    .block-messages__close-wrapper {
+        display: flex;
+    }
+}
+
+@media (max-width: 800px) {
+    .block-messages-small {
+        flex: 1 0 100%;
+        order: -1;
     }
 }
